# kenos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat  run.sh
include/diskformats/: mbr.h
include/efi/: efi.h
include/system/common/: guid.h  utils.h
include/system/formats/disk/: fat.h  gpt.h  mbr.h
projects/: CMakeLists.txt
projects/libs/: CMakeLists.txt
projects/libs/common/: CMakeLists.txt
projects/libs/common/src/: utils.c
projects/libs/diskformats/: CMakeLists.txt  gpt.c
projects/libs/diskformats/src/: mbr.c
projects/libs/fat/: CMakeLists.txt
projects/libs/fat/src/: fat.c
projects/libs/gpt/: CMakeLists.txt
projects/os/boot/: CMakeLists.txt  efi.h  efimain.c
projects/tools/: CMakeLists.txt
projects/tools/createdisk/: CMakeLists.txt  main.c
projects/tools/createdisk/src/: guid.c  main.c
